# forwarder-executer-poc

./: api-call.sh
go-dynamic-grpc-executer/: dockerfile  go.mod  go.sum  main.go
go-dynamic-grpc-executer/pb/hello/: hello.pb.go  hello_grpc.pb.go
go-dynamic-grpc-executer/proto/: hello.proto
go-dynamic-grpc-executer/utils/: methodmap_generator.go
go-executer/: docker-compose.yml  dockerfile  go.mod  go.sum  main.go
go-executer/pb/: greeter.pb.go  greeter_grpc.pb.go  hello.pb.go  hello_grpc.pb.go
go-executer/pb/hello/: hello.pb.go  hello_grpc.pb.go
go-executer/proto/: greeter.proto  hello.proto
go-forwarder/: dockerfile  go.mod  main.go
go-forwarder/pb/: greeter.pb.go
go-forwarder/proto/: greeter.proto
node-executer/: app.js  dockerfile  package-lock.json  package.json
node-grpc-server/: docker-compose.yml  dockerfile  package-lock.json  package.json  server.js
rust-executer/: Cargo.toml  dockerfile
rust-executer/proto/: hello.proto
rust-executer/src/: main.rs
