[package]
name = "rust-executer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["multipart"] }
tokio = { version = "1.37", features = ["full"] }
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1.6.0"

[build-dependencies]
tonic-build = "0.11"
